--- a/MantinsCode.RestClient/MantinsCode.RestClient.csproj
+++ b/MantinsCode.RestClient/MantinsCode.RestClient.csproj
@@ -8,4 +8,16 @@
     <Title>MantisCode.RestClient</Title>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.3" />
+    <PackageReference Include="Polly" Version="8.5.2" />
+    <PackageReference Include="RestEase" Version="1.6.4" />
+    <PackageReference Include="RestEase.HttpClientFactory" Version="1.6.4" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="System.Threading.RateLimiting" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
