--- a/MantinsCode.RestClient/nuget.config
+++ b/MantinsCode.RestClient/nuget.config
@@ -2,12 +2,9 @@
 <configuration>
 	<packageSources>
 		<clear />
+		<add key="enabled" value="True" />
+		<add key="automatic" value="True" />
 		<add key="github" value="https://nuget.pkg.github.com/MantisCodeBeta/index.json" />
+		<add key="MantisCodeBeta" value="https://github.com/MantisCodeBeta/index.json" />
 	</packageSources>
-	<packageSourceCredentials>
-		<github>
-			<add key="Username" value="lazarus88" />
-			<add key="ClearTextPassword" value="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" />
-		</github>
-	</packageSourceCredentials>
 </configuration>
